# ModbusLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bugfix.md  build.bash  build.bat  build.sh  changelog.md  modbusall.pro
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  ModbusLib.chm
doc/output/: ModbusLib.chm
doc/pages/: 01_architecture.md  02_client_guide.md  03_server_guide.md  04_api_reference.md  05_protocol_details.md  06_configuration.md  mainpage.md
examples/: CMakePresets.json
examples/client/: CMakeLists.txt  client.cpp  client.pro  democlient.cpp  democlient.pro  mbclient.c  mbclient.cpp  mbclient.pro  mbclientc.c  mbclientc.pro
examples/server/: CMakeLists.txt  demoserver.cpp  demoserver.pro  mbserver.c  mbserver.cpp  mbserver.pro  mbserverc.c  mbserverc.pro  server.cpp  server.pro
src/: CMakeLists.txt  Modbus.cpp  Modbus.h  ModbusAscFrame_p.h  ModbusAscOverTcpPort.cpp  ModbusAscOverTcpPort.h  ModbusAscOverUdpPort.cpp  ModbusAscOverUdpPort.h  ModbusAscPort.cpp  ModbusAscPort.h  ModbusCallback.h  ModbusClient.cpp  ModbusClient.h  ModbusClientPort.cpp  ModbusClientPort.h  ModbusClientPort_p.h  ModbusClient_p.h  ModbusFrame_p.h  ModbusGlobal.h  ModbusNetFrame_p.h  ModbusNetPort.cpp  ModbusNetPort.h  ModbusNetPort_p.h  ModbusObject.cpp  ModbusObject.h  ModbusObject_p.h  ModbusPlatform.h  ModbusPort.cpp  ModbusPort.h  ModbusPortASC.cpp  ModbusPortASC.h  ModbusPortRTU.cpp  ModbusPortRTU.h  ModbusPortSerial.cpp  ModbusPortSerial.h  ModbusPortTCP.cpp  ModbusPortTCP.h  ModbusPort_p.h  ModbusQt.cpp  ModbusQt.h  (+42 more)
src/cmake/: config.cmake.in
src/unix/: ModbusSerialPort_p_unix.h  ModbusSerialPort_unix.cpp  ModbusTCP_unix.h  ModbusTcpPortBase_p_unix.h  ModbusTcpPortBase_unix.cpp  ModbusTcpPort_p_unix.h  ModbusTcpPort_unix.cpp  ModbusTcpServer_p_unix.h  ModbusTcpServer_unix.cpp  ModbusUdpPortBase_p_unix.h  ModbusUdpPortBase_unix.cpp  ModbusUdpPort_p_unix.h  ModbusUdpPort_unix.cpp  Modbus_unix.cpp  Modbus_unix.h
src/win/: ModbusPortSerial_win.cpp  ModbusPortTCP_win.cpp  ModbusSerialPort_p_win.h  ModbusSerialPort_win.cpp  ModbusServerTCP_win.cpp  ModbusTCP_win.h  ModbusTcpPortBase_p_win.h  ModbusTcpPortBase_win.cpp  ModbusTcpPort_p_win.h  ModbusTcpPort_win.cpp  ModbusTcpServer_p_win.h  ModbusTcpServer_win.cpp  ModbusUdpPortBase_p_win.h  ModbusUdpPortBase_win.cpp  ModbusUdpPort_p_win.h  ModbusUdpPort_win.cpp  Modbus_win.cpp  Modbus_win.h
tests/: CMakeLists.txt  MockModbusDevice.h  MockModbusPort.h  ModbusAddress_test.cpp  ModbusAscOverTcpPort_test.cpp  ModbusAscOverUdpPort_test.cpp  ModbusAscPort_test.cpp  ModbusClientPort_test.cpp  ModbusClient_test.cpp  ModbusQt_test.cpp  ModbusRtuOverTcpPort_test.cpp  ModbusRtuOverUdpPort_test.cpp  ModbusRtuPort_test.cpp  ModbusServerPort_test.cpp  ModbusServerResource_test.cpp  ModbusTcpPort_test.cpp  ModbusTcpServer_test.cpp  ModbusUdpPort_test.cpp  Modbus_test.cpp  TestModbus.cpp  TestModbus.h  TestModbusClientPort.cpp  TestModbusServerPort.cpp  TestModbusTcpServer.cpp  cModbus_test.cpp  gtest_dependency.cmake  gtest_dependency.pri  test.pro
tests/unix/: TestModbus_unix.cpp
tests/win/: TestModbus_win.cpp
